--- a/MyReqnrollFirstProj.csproj
+++ b/MyReqnrollFirstProj.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.38.0" />
     <PackageReference Include="Selenium.Support" Version="4.38.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
   </ItemGroup>
 
 </Project>
