--- a/MyReqnrollFirstProj.csproj
+++ b/MyReqnrollFirstProj.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Selenium.WebDriver" Version="4.38.0" />
     <PackageReference Include="Selenium.Support" Version="4.38.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="ExtentReports" Version="5.0.4" />
   </ItemGroup>
 
 </Project>
