--- a/MyReqnrollFirstProj.csproj
+++ b/MyReqnrollFirstProj.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Selenium.Support" Version="4.38.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="ExtentReports" Version="5.0.4" />
+    <PackageReference Include="WebDriverManager" Version="2.17.6" />
   </ItemGroup>
 
 </Project>
