--- a/ReqnrollProj.csproj
+++ b/ReqnrollProj.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <ParallelizeTestCollections>true</ParallelizeTestCollections>
   </PropertyGroup>
 
   <ItemGroup>
