--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -44,6 +44,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Google Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
     - name: Checkout repository
       uses: actions/checkout@v4
 
