--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -113,6 +113,7 @@ jobs:
 
     # ✔ FIXED: Updated artifact action to v4
     - name: Publish Extent HTML Report
+      if: always()
       uses: actions/upload-artifact@v4
       with:
         name: ExtentReport
